[package]
name = "possum"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
clap = { version = "4.4.2", features = ["derive"] }
libc = { git = "https://github.com/rust-lang/libc.git" }
# Need sqlite3 3.42 or later.
rusqlite = { git = "https://github.com/rusqlite/rusqlite.git", features = ["bundled"] }
log = "0.4.20"
env_logger = "0.10.0"
nix = { version = "0.27.1", features = ["fs"] }
num = "0.4.1"
tempfile = "3.8.0"
memmap2 = "0.9.0"
# This might currently only be needed for test utilities, but there's no easy way to share dependencies when test is
# enabled.
rand = "0.8.5"
twox-hash = "1.6.3"
positioned-io = "0.3.2"
stable_deref_trait = "1.2.0"
chrono = "0.4.31"
fdlimit = "0.3.0"
thiserror = "1.0.50"

[dev-dependencies]
criterion = "0.5.1"
bytesize = "1.3.0"

[[bench]]
name = "possum"
harness = false
