[package]
name = "possum-db"
version = "0.1.1"
edition = "2021"
description = "concurrent disk-backed cache supporting efficient direct file I/O, transactions, and snapshots using file cloning and sparse files"
license = "MPL-2.0"
autobenches = false
readme = "README.adoc"
repository = "https://github.com/anacrolix/possum"
authors = ["Matt Joiner <anacrolix@gmail.com>"]
categories = ["database", "database-implementations", "filesystem", "embedded", "data-structures"]
keywords = ["database", "embedded", "persistence", "sqlite"]

[lib]
name = "possum"
crate-type = ["staticlib", "cdylib", "lib"]
# Prevent unrecognized option errors for cargo bench.
bench = false

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
clap = { version = "4.4.2", features = ["derive"] }
libc = { version = "0.2.149" }
# Need sqlite3 3.42 or later.
rusqlite = { version = "0.30.0", features = ["bundled"] }
log = "0.4.20"
env_logger = "0.10.0"
nix = { version = "0.27.1", features = ["fs", "process"] }
num = "0.4.1"
tempfile = "3.8.0"
memmap2 = "0.9.0"
twox-hash = "1.6.3"
positioned-io = "0.3.2"
stable_deref_trait = "1.2.0"
chrono = "0.4.31"
thiserror = "1.0.50"
itertools = "0.12.0"
maplit = "1.0.2"
rand = { version = "0.8.5", features = ["small_rng"] }
take_mut = "0.2.2"

[dev-dependencies]
criterion = "0.5.1"
bytesize = "1.3.0"
test-log = "0.2.14"
fdlimit = "0.3.0"

[[bench]]
name = "possum"
harness = false

[[bin]]
name = "possum"
bench = false
path = "src/main.rs"